Fix layout issue when on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,22 @@ h4{font-size:18px;  font-weight:500;}
 .service_title{font-size:18px; margin:15px 0 5px 0; color:#575757;}
 
 .workwrapper{width:100%; padding:70px 0 50px 0; text-align:center;}
-.workmargin{margin-bottom:50px;}
+/*.workmargin{margin-bottom:50px;}*/
+.workmargin {
+   width:100%;
+    overflow: hidden;
+		margin-bottom:50px;
+}
+@media only screen and (max-width: 767px)
+{
+    .one, .two, .three, .four
+    {
+        display: block;
+        float: none;
+        width: 100%;
+        padding: 20px 0;
+    }
+}
 .workbox{float:left;}
 .workbox img{width:100%;}
 .worktitle{margin-top:15%; font-size:18px; font-weight:bold; color:#ffffff;}
